no user selection

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         font-kerning: normal;
         box-sizing: border-box;
         overflow: hidden;
-        /* user-select: none; */
+        user-select: none;
       }
       * {
         box-sizing: inherit;
